--- a/cypress/.eslintrc.json
+++ b/cypress/.eslintrc.json
@@ -4,7 +4,7 @@
     ],
     "rules": {
       "cypress/no-force": "error", // não fprca o clique
-      "cypress/assertion-before-screenshot": "error"
-      //"cypress/no-pause": "error" //não deixar pause no eslint do cypress waith()
+      "cypress/assertion-before-screenshot": "error",
+      "cypress/no-pause": "error" //não deixar pause no eslint do cypress waith()
     }
   }
